tamplate home actualizado

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
+/* background: url(../img/home/Fondo.jpg); */
+
 body {
     padding-top: 90px;
 }
+.container-Login{
+	background: url(../img/home/Fondo.jpg);
+}
+
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
