--- a/public/css/productoSeleccionado.css
+++ b/public/css/productoSeleccionado.css
@@ -1,6 +1,3 @@
-body {
-    padding-top: 40px;
-}
 .encabezado{
     text-align: center;
     padding-bottom: 40px;
@@ -26,6 +23,14 @@ body {
     float: right;
 }
 
-.boton-carrito{
-    display: inline-flex;
-}
+.showcase header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 100px;
+    z-index:1000;
+    display: flex;
+    align-items: center;
+    font-size: 30;
+  }
